[package]
name = "tictacweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3" , features=["json"] }
ulid = "1.0.0"
serde = { version = "1.0.130" , features = ["derive"] }
dashmap = "5.5.0"
